Stopped navbar icon jumping on hover

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,6 +82,10 @@ html body {
   min-height: 99px;
 }
 
+#nav-microphone, #nav-cog, #nav-video, #nav-exit {
+  min-width: 95px;
+}
+
 
 
 // Talking Stick show.html.erb page
